--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>CSC 362 Data Visualization</h2>
     <ul>
         <li><a href="./trails-skeleton/index.html">Lab 7 - Linked Bar Chart and Scatterplot</a></li>
+        <li><a href="./lab8/index.html">Lab 8 </a></li>
     </ul>
     
 </body>
