--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="./trails-skeleton/index.html">Lab 7 - Linked Bar Chart and Scatterplot</a></li>
         <li><a href="./lab8/index.html">Lab 8 </a></li>
+        <li><a href="./final-project/index.html">Lab 8 </a></li>
     </ul>
     
 </body>
