--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="./trails-skeleton/index.html">Lab 7 - Linked Bar Chart and Scatterplot</a></li>
         <li><a href="./lab8/index.html">Lab 8 </a></li>
         <li><a href="./final-project/index.html">Final Project </a></li>
+        <li><a href="https://docs.google.com/document/d/1cDd3zDAcdktvgE5g5zS6I0iU9fy7M3qJZQFQmf9IIxw/edit?usp=sharing">Final Project Write-up </a></li>
     </ul>
     
 </body>
