--- a/final-project/index.html
+++ b/final-project/index.html
@@ -25,7 +25,14 @@
     </div>
   </div>
 
-  <div id="map"></div>
+  <div id="map" role="img" aria-label="Map of North Carolina showing 2A wrestling performance by county. Darker blue means better performance. Use filters to adjust year and weight class."></div>
+
+  <div id="info-box" class="info-box">
+    <div class="vis-caption"><strong>Instructions:</strong> Use the filters above to explore North Carolina 2A wrestling results by year and weight class. Click on counties for detailed results.</div>
+    <div class="vis-caption"><strong>Caption:</strong> This map displays the performance of North Carolina 2A wrestling teams by county from 2021–2025. Darker shades represent higher scores.</div>
+    <a href="NCWrestling.html" target="_blank">View Full Data Table</a>
+  </div>
+  
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="main.js"></script>
