--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Coursework</h1>
-    <h2>CSC 362 Data Visualization</h2>
+    <h1>CSC 362 Data Visualization</h1>
+    <h2>Labs</h2>
     <ul>
         <li><a href="./trails-skeleton/index.html">Lab 7 - Linked Bar Chart and Scatterplot</a></li>
         <li><a href="./lab8/index.html">Lab 8 </a></li>
+    </ul>
+    <h2>Final Project</h2>
+    <ul>
         <li><a href="./final-project/index.html">Final Project </a></li>
         <li><a href="https://docs.google.com/document/d/1cDd3zDAcdktvgE5g5zS6I0iU9fy7M3qJZQFQmf9IIxw/edit?usp=sharing">Final Project Write-up </a></li>
     </ul>
-    
 </body>
 </html>
